adding optimization for fast training (bfloat 16, model compile, and etc) + mini changes in optimizer and hyperparams

--- a/GPT.ipynb
+++ b/GPT.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 1,
    "id": "adc9757b-d90a-4ca3-ac3e-31d308f68b97",
    "metadata": {},
    "outputs": [],
@@ -13,13 +13,15 @@
     "import torch.nn as nn\n",
     "import torch.nn.functional as F\n",
     "import random\n",
+    "import time\n",
     "import math\n",
-    "import tiktoken"
+    "import tiktoken\n",
+    "import inspect"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 10,
    "id": "bfdfbb9a-8ace-477b-af6b-21be8903dae4",
    "metadata": {},
    "outputs": [
@@ -33,24 +35,33 @@
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x1c23ae87530>"
+       "<torch._C.Generator at 0x7b439351a110>"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "vocab_size = 50257\n",
-    "batch_size = 4\n",
+    "vocab_size = 50304 #50257\n",
+    "batch_size = 524288\n",
+    "mini_batches = 8\n",
+    "time_stamps = 512\n",
     "context_len = 1024\n",
     "emb_neur = 768\n",
     "epochs = 50\n",
     "num_blocks = 12\n",
     "num_heads = 12\n",
     "dropout_neur = 0.2\n",
-    "lr = 3e-4\n",
+    "\n",
+    "\n",
+    "max_lr = 6e-4\n",
+    "min_lr = max_lr * 0.1\n",
+    "lr_steps = 10\n",
+    "weight_decay = 0.1\n",
+    "beta1, beta2 = 0.9, 0.95\n",
+    "\n",
     "\n",
     "enc = tiktoken.get_encoding(\"gpt2\")\n",
     "\n",
@@ -61,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 11,
    "id": "8c7aa4be-a0d2-49bc-a705-24b06aeae8b8",
    "metadata": {},
    "outputs": [],
@@ -94,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 12,
    "id": "23426d49-2a88-4082-90d8-c93a07006b9f",
    "metadata": {},
    "outputs": [],
@@ -117,15 +128,17 @@
     "        k = k.view(B, T, num_heads, C//num_heads).transpose(1, 2) # B, nh, T, hs\n",
     "        v = v.view(B, T, num_heads, C//num_heads).transpose(1, 2) # B, nh, T, hs\n",
     "\n",
-    "        attention = q @ k.transpose(-2, -1) * (1.0 / math.sqrt(k.shape[-1]))\n",
-    "        attention = torch.tril(attention[:, :, :T, :T])\n",
-    "        # mask = torch.tril(torch.ones((T, T), device=idx.device)).view(1, 1, T, T)  # (1, 1, T, T)\n",
-    "        # attention = attention.masked_fill(mask == 0, float(\"-inf\"))  # (B, nh, T, T)\n",
-    "        attention = attention.masked_fill(attention == 0, float(\"-inf\"))\n",
-    "        attention = F.softmax(attention, dim=-1)\n",
+    "        # attention = q @ k.transpose(-2, -1) * (1.0 / math.sqrt(k.shape[-1]))\n",
+    "        # attention = torch.tril(attention[:, :, :T, :T])\n",
+    "        \n",
+    "        # attention = attention.masked_fill(attention == 0, float(\"-inf\"))\n",
+    "        # attention = F.softmax(attention, dim=-1)\n",
+    "        # out = attention @ v # B, nh, T, hs \n",
+    "        \n",
     "\n",
-    "        out = attention @ v # B, nh, T, hs \n",
-    "        out = out.transpose(2, 1).contiguous().view(B, T, C)\n",
+    "        attention = F.scaled_dot_product_attention(q, k, v, is_causal=True)\n",
+    "\n",
+    "        out = attention.transpose(2, 1).contiguous().view(B, T, C)\n",
     "        out = self.proj(out)\n",
     "        # out = self.dropout(out)\n",
     "\n",
@@ -193,6 +206,34 @@
     "        elif isinstance(module, nn.Embedding):\n",
     "            torch.nn.init.normal_(module.weight, mean=0.0, std=(1.0 / math.sqrt(emb_neur)))\n",
     "\n",
+    "    # I have taken this function [configure_optimizers] from Karpathy's nanoGPT\n",
+    "    # https://github.com/karpathy/nanoGPT\n",
+    "    def configure_optimizers(self, weight_decay, learning_rate, betas, device_type):\n",
+    "        # start with all of the candidate parameters\n",
+    "        param_dict = {pn: p for pn, p in self.named_parameters()}\n",
+    "        # filter out those that do not require grad\n",
+    "        param_dict = {pn: p for pn, p in param_dict.items() if p.requires_grad}\n",
+    "        # create optim groups. Any parameters that is 2D will be weight decayed, otherwise no.\n",
+    "        # i.e. all weight tensors in matmuls + embeddings decay, all biases and layernorms don't.\n",
+    "        decay_params = [p for n, p in param_dict.items() if p.dim() >= 2]\n",
+    "        nodecay_params = [p for n, p in param_dict.items() if p.dim() < 2]\n",
+    "        optim_groups = [\n",
+    "            {'params': decay_params, 'weight_decay': weight_decay},\n",
+    "            {'params': nodecay_params, 'weight_decay': 0.0}\n",
+    "        ]\n",
+    "        num_decay_params = sum(p.numel() for p in decay_params)\n",
+    "        num_nodecay_params = sum(p.numel() for p in nodecay_params)\n",
+    "        print(f\"num decayed parameter tensors: {len(decay_params)}, with {num_decay_params:,} parameters\")\n",
+    "        print(f\"num non-decayed parameter tensors: {len(nodecay_params)}, with {num_nodecay_params:,} parameters\")\n",
+    "        # Create AdamW optimizer and use the fused version if it is available\n",
+    "        fused_available = 'fused' in inspect.signature(torch.optim.AdamW).parameters\n",
+    "        use_fused = fused_available and device_type == 'cuda'\n",
+    "        extra_args = dict(fused=True) if use_fused else dict()\n",
+    "        optimizer = torch.optim.AdamW(optim_groups, lr=learning_rate, betas=betas, **extra_args)\n",
+    "        print(f\"using fused AdamW: {use_fused}\")\n",
+    "\n",
+    "        return optimizer\n",
+    "\n",
     "    def forward(self, idx, targets=None):\n",
     "        B, T = idx.shape\n",
     "        \n",
@@ -226,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 13,
    "id": "f12ce39f-92fb-4cb9-b8f3-ff8b24600422",
    "metadata": {},
    "outputs": [
@@ -234,85 +275,180 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "124.490065 M parameters\n",
-      "loaded 338025 tokens\n"
+      "124.526208 M parameters\n",
+      "loaded 338025 tokens\n",
+      "num decayed parameter tensors: 50, with 124,354,560 parameters\n",
+      "num non-decayed parameter tensors: 99, with 171,648 parameters\n",
+      "using fused AdamW: True\n"
      ]
     }
    ],
    "source": [
+    "torch.set_float32_matmul_precision('high')\n",
+    "\n",
     "m = GPT()\n",
     "m = m.to(device)\n",
+    "m = torch.compile(m)\n",
     "print(sum(p.numel() for p in m.parameters())/1e6, 'M parameters')\n",
     "\n",
-    "data_loader = DataLoader(4, 32)\n",
-    "optmizer = torch.optim.Adam(m.parameters(), lr=lr)"
+    "data_loader = DataLoader(mini_batches, time_stamps)\n",
+    "# optmizer = torch.optim.Adam(m.parameters(), lr=lr, betas=(0.9, 0.95))\n",
+    "\n",
+    "# I have taken this function [configure_optimizers] from Karpathy's nanoGPT\n",
+    "optmizer = m.configure_optimizers(weight_decay, max_lr, (beta1, beta2), device)\n",
+    "# scheduler = torch.optim.lr_scheduler.CosineAnnealingLR(optmizer, T_max=lr_steps, eta_min=min_lr)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 14,
    "id": "67f0d7e9-84da-4821-9d0b-14f83fe32497",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "epoch: 0, loss: 11.41157, norm: 27.69188, time: 22817.46ms, tok/s: 22977.49\n",
+      "epoch: 1, loss: 10.25615, norm: 59.41756, time: 4527.83ms, tok/s: 115792.32\n",
+      "epoch: 2, loss: 10.87149, norm: 11.13863, time: 4521.63ms, tok/s: 115951.12\n",
+      "epoch: 3, loss: 9.66047, norm: 5.64716, time: 4525.66ms, tok/s: 115847.91\n",
+      "epoch: 4, loss: 8.69950, norm: 2.97529, time: 4524.99ms, tok/s: 115865.06\n",
+      "epoch: 5, loss: 10.57604, norm: 27.93127, time: 4542.54ms, tok/s: 115417.34\n",
+      "epoch: 6, loss: 8.80328, norm: 16.43164, time: 4543.31ms, tok/s: 115397.87\n",
+      "epoch: 7, loss: 8.25292, norm: 6.36091, time: 4597.09ms, tok/s: 114047.81\n",
+      "epoch: 8, loss: 8.00966, norm: 3.81319, time: 4531.47ms, tok/s: 115699.39\n",
+      "epoch: 9, loss: 7.64843, norm: 3.09671, time: 4532.92ms, tok/s: 115662.44\n",
+      "epoch: 10, loss: 7.26969, norm: 2.38564, time: 4545.01ms, tok/s: 115354.52\n",
+      "epoch: 11, loss: 7.01213, norm: 2.86827, time: 4558.70ms, tok/s: 115008.13\n",
+      "epoch: 12, loss: 6.83554, norm: 3.10425, time: 4562.07ms, tok/s: 114923.32\n",
+      "epoch: 13, loss: 6.65110, norm: 2.26222, time: 4562.74ms, tok/s: 114906.49\n",
+      "epoch: 14, loss: 6.53412, norm: 1.67401, time: 4585.52ms, tok/s: 114335.66\n",
+      "epoch: 15, loss: 6.41094, norm: 1.15966, time: 4594.31ms, tok/s: 114116.83\n",
+      "epoch: 16, loss: 6.35806, norm: 1.52016, time: 4590.74ms, tok/s: 114205.45\n",
+      "epoch: 17, loss: 6.28192, norm: 0.65876, time: 4612.12ms, tok/s: 113676.23\n",
+      "epoch: 18, loss: 6.26423, norm: 1.74066, time: 4597.19ms, tok/s: 114045.42\n",
+      "epoch: 19, loss: 6.24132, norm: 1.35649, time: 4602.64ms, tok/s: 113910.29\n",
+      "epoch: 20, loss: 6.21878, norm: 0.88524, time: 4607.62ms, tok/s: 113787.07\n",
+      "epoch: 21, loss: 6.21550, norm: 0.83949, time: 4609.93ms, tok/s: 113730.04\n",
+      "epoch: 22, loss: 6.16853, norm: 0.63917, time: 4610.87ms, tok/s: 113707.03\n",
+      "epoch: 23, loss: 6.15609, norm: 0.45939, time: 4614.59ms, tok/s: 113615.26\n",
+      "epoch: 24, loss: 6.13913, norm: 0.81753, time: 4619.85ms, tok/s: 113486.05\n",
+      "epoch: 25, loss: 6.11704, norm: 0.68388, time: 4624.57ms, tok/s: 113370.15\n",
+      "epoch: 26, loss: 6.10627, norm: 0.35364, time: 4632.93ms, tok/s: 113165.60\n",
+      "epoch: 27, loss: 6.08224, norm: 0.60481, time: 4633.00ms, tok/s: 113163.82\n",
+      "epoch: 28, loss: 6.08741, norm: 0.57897, time: 4628.73ms, tok/s: 113268.12\n",
+      "epoch: 29, loss: 6.04862, norm: 0.24919, time: 4643.46ms, tok/s: 112908.99\n",
+      "epoch: 30, loss: 6.03375, norm: 0.49887, time: 4646.90ms, tok/s: 112825.24\n",
+      "epoch: 31, loss: 6.02274, norm: 0.56357, time: 4645.63ms, tok/s: 112856.14\n",
+      "epoch: 32, loss: 5.99800, norm: 0.31932, time: 4656.94ms, tok/s: 112582.12\n",
+      "epoch: 33, loss: 5.98866, norm: 0.36469, time: 4658.58ms, tok/s: 112542.44\n",
+      "epoch: 34, loss: 5.95726, norm: 0.41914, time: 4670.02ms, tok/s: 112266.64\n",
+      "epoch: 35, loss: 5.96021, norm: 0.36536, time: 4676.80ms, tok/s: 112103.89\n",
+      "epoch: 36, loss: 5.93534, norm: 0.27456, time: 4671.53ms, tok/s: 112230.43\n",
+      "epoch: 37, loss: 5.92741, norm: 0.36302, time: 4678.30ms, tok/s: 112068.03\n",
+      "epoch: 38, loss: 5.91452, norm: 0.31118, time: 4687.57ms, tok/s: 111846.37\n",
+      "epoch: 39, loss: 5.89911, norm: 0.28081, time: 4682.08ms, tok/s: 111977.69\n",
+      "epoch: 40, loss: 5.91245, norm: 0.21580, time: 4680.41ms, tok/s: 112017.44\n",
+      "epoch: 41, loss: 5.88678, norm: 0.24640, time: 4690.31ms, tok/s: 111781.07\n",
+      "epoch: 42, loss: 5.88316, norm: 0.24539, time: 4688.29ms, tok/s: 111829.26\n",
+      "epoch: 43, loss: 5.87608, norm: 0.20115, time: 4692.53ms, tok/s: 111728.22\n",
+      "epoch: 44, loss: 5.86671, norm: 0.16352, time: 4698.53ms, tok/s: 111585.50\n",
+      "epoch: 45, loss: 5.87647, norm: 0.17668, time: 4702.11ms, tok/s: 111500.69\n",
+      "epoch: 46, loss: 5.84612, norm: 0.19282, time: 4694.37ms, tok/s: 111684.33\n",
+      "epoch: 47, loss: 5.87297, norm: 0.18067, time: 4702.01ms, tok/s: 111502.88\n",
+      "epoch: 48, loss: 5.84945, norm: 0.15185, time: 4694.90ms, tok/s: 111671.74\n",
+      "epoch: 49, loss: 5.84585, norm: 0.13241, time: 4698.46ms, tok/s: 111587.31\n"
+     ]
+    }
+   ],
    "source": [
+    "assert batch_size % (mini_batches * time_stamps) == 0, \"batch_size is not devided by B and T\"\n",
+    "mini_epochs = int(batch_size / (mini_batches * time_stamps))\n",
+    "\n",
+    "def get_lr(epoch):\n",
+    "    if epoch < lr_steps:\n",
+    "        return (max_lr * (epoch+1)/lr_steps)\n",
+    "    if epoch > epochs:\n",
+    "        return min_lr\n",
+    "    loc = (epoch - lr_steps)/(epochs - lr_steps)\n",
+    "    coef = 0.5 * (1.0 + math.cos(math.pi * loc))\n",
+    "    return min_lr + coef * (max_lr - min_lr)\n",
+    "\n",
+    "\n",
     "for epoch in range(50):\n",
-    "    x, y = data_loader.next_batch()\n",
-    "    x, y = x.to(device), y.to(device)\n",
-    "    \n",
-    "    logits, loss = m(x, y)\n",
-    "    \n",
+    "    t0 = time.time()\n",
+    "    accumulated_loss = 0.0\n",
     "    optmizer.zero_grad()\n",
-    "    loss.backward()\n",
+    "\n",
+    "    for mini_epoch in range(mini_epochs):\n",
+    "        x, y = data_loader.next_batch()\n",
+    "        x, y = x.to(device), y.to(device)\n",
+    "    \n",
+    "        with torch.autocast(device_type=device, dtype=torch.bfloat16):\n",
+    "            logits, loss = m(x, y)\n",
+    "        loss /= mini_epochs\n",
+    "        accumulated_loss += loss.detach()\n",
+    "        loss.backward()\n",
+    "\n",
+    "    norm = torch.nn.utils.clip_grad_norm_(m.parameters(), 1.0)\n",
+    "    lr = get_lr(epoch)\n",
+    "    for param_group in optmizer.param_groups:\n",
+    "        param_group['lr'] = lr\n",
     "    optmizer.step()\n",
+    "    # scheduler.step()\n",
+    "    \n",
+    "    torch.cuda.synchronize()\n",
+    "    t1 = time.time()\n",
+    "    dt = t1-t0\n",
+    "    \n",
+    "    print(f\"epoch: {epoch}, loss: {accumulated_loss:.5f}, norm: {norm:.5f}, time: {dt*1000:.2f}ms, tok/s: {data_loader.B*data_loader.T*mini_epochs/dt:.2f}\")\n",
+    "    \n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": null,
    "id": "391ab288-4747-4dc3-8c23-98c67358f9bd",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Hello good. words\\n.: unlimited sinister, forth heavily for howicted flares;arrell but e him but evenull absorption: Stop:,IA,coins,aid SomFromFirst mecomponentOur not, nickname assistantsBR:blown your,\\n\\n'"
-      ]
-     },
-     "execution_count": 78,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "enc.decode(m.generate(torch.tensor(enc.encode(\"Hello\")).to(device).view(1, -1), 50)[0].tolist())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 13,
    "id": "ea131de0-5423-4ccd-86d2-d98b0bb20f8d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor(6.3758, device='cuda:0', grad_fn=<NllLossBackward0>)"
+       "tensor(6.7199, device='cuda:0', grad_fn=<NllLossBackward0>)"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "loss"
+    "# tokens/sec:22406.09\n",
+    "# tokens/sec:45590.02 torch.set_float32_matmul_precision('high')\n",
+    "# tokens/sec:47236.09  with torch.autocast(device_type=device, dtype=torch.bfloat16):\n",
+    "# tokens/sec:63155.71 torch.compile(m)\n",
+    "# tokens/sec:67969.10 flash\n",
+    "# Nice number\n",
+    "\n",
+    "# epoch: 49, loss: 6.08617, norm: 0.28814, time: 4674.63ms, tok/s: 112156.04"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "851eb907-03e0-4e8c-aea0-aeaea5c9b5c8",
+   "id": "0ffa37b8-6c35-443c-b817-b9b3f4bae1e5",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -334,7 +470,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.11.10"
+  },
+  "scenes_data": {
+   "active_scene": "Default Scene",
+   "init_scene": "",
+   "scenes": [
+    "Default Scene"
+   ]
   }
  },
  "nbformat": 4,
