Distributed Data Parallel

--- a/GPT.ipynb
+++ b/GPT.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "id": "adc9757b-d90a-4ca3-ac3e-31d308f68b97",
    "metadata": {},
    "outputs": [],
@@ -16,12 +16,18 @@
     "import time\n",
     "import math\n",
     "import tiktoken\n",
-    "import inspect"
+    "import inspect\n",
+    "import os\n",
+    "\n",
+    "\n",
+    "from torch.distributed import init_process_group, destroy_process_group\n",
+    "from torch.nn.parallel import DistributedDataParallel as DDP\n",
+    "import torch.distributed as dist"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "bfdfbb9a-8ace-477b-af6b-21be8903dae4",
    "metadata": {},
    "outputs": [
@@ -29,23 +35,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "cuda\n"
+      "device: cuda\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<torch._C.Generator at 0x7b439351a110>"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "vocab_size = 50304 #50257\n",
-    "batch_size = 524288\n",
+    "batch_size = 2**19\n",
     "mini_batches = 8\n",
     "time_stamps = 512\n",
     "context_len = 1024\n",
@@ -65,47 +61,90 @@
     "\n",
     "enc = tiktoken.get_encoding(\"gpt2\")\n",
     "\n",
-    "device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
-    "print(device)\n",
-    "torch.manual_seed(1337)"
+    "\n",
+    "\n",
+    "ddp = int(os.environ.get('RANK', -1)) != -1 \n",
+    "if ddp:\n",
+    "    init_process_group(backend=\"nccl\")\n",
+    "    ddp_rank = int(os.environ['RANK'])\n",
+    "    ddp_local_rank = int(os.environ['LOCAL_RANK'])\n",
+    "    ddp_world_size = int(os.environ['WORLD_SIZE'])\n",
+    "    device = f'cuda:{ddp_local_rank}'\n",
+    "    torch.cuda.set_device(device)\n",
+    "    master_process = ddp_rank == 0\n",
+    "else:\n",
+    "    ddp_rank = 0\n",
+    "    ddp_local_rank = 0\n",
+    "    ddp_world_size = 1\n",
+    "    master_process = True\n",
+    "    device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
+    "    print(f\"device: {device}\")\n",
+    "    \n",
+    "\n",
+    "torch.manual_seed(1337)\n",
+    "if device == 'cuda':\n",
+    "    torch.cuda.manual_seed(1337)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
+   "id": "5ba70c2c-1dba-4868-9fbb-d7fc8e83a7ce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_lr(epoch):\n",
+    "    if epoch < lr_steps:\n",
+    "        return (max_lr * (epoch+1)/lr_steps)\n",
+    "    if epoch > epochs:\n",
+    "        return min_lr\n",
+    "    loc = (epoch - lr_steps)/(epochs - lr_steps)\n",
+    "    coef = 0.5 * (1.0 + math.cos(math.pi * loc))\n",
+    "    return min_lr + coef * (max_lr - min_lr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "id": "8c7aa4be-a0d2-49bc-a705-24b06aeae8b8",
    "metadata": {},
    "outputs": [],
    "source": [
+    "assert batch_size % (mini_batches * time_stamps * ddp_world_size) == 0, \"batch_size is not devided by B and T and number_of_gpus\"\n",
+    "mini_epochs = int(batch_size / (mini_batches * time_stamps * ddp_world_size)) #number of mini-batches to get 0.5M batch\n",
+    "\n",
+    "\n",
     "class DataLoader():\n",
-    "    def __init__(self, B, T):\n",
+    "    def __init__(self, B, T, cur_process, num_processes):\n",
     "        self.B = B\n",
     "        self.T = T\n",
+    "        self.cur_process = cur_process\n",
+    "        self.num_processes = num_processes\n",
     "        \n",
     "        with open('input.txt', 'r') as f:\n",
     "            text = f.read()\n",
     "        text = enc.encode(text)\n",
     "        self.tokens = torch.tensor(text)\n",
     "        \n",
-    "        self.current_step = 1\n",
+    "        self.current_step = cur_process * B * T\n",
     "\n",
     "        print(f\"loaded {len(text)} tokens\")\n",
     "\n",
     "    def next_batch(self):\n",
     "        B, T = self.B, self.T\n",
     "        \n",
-    "        self.current_step += 1\n",
-    "        tokens = self.tokens[(self.current_step-1)*B*T:self.current_step*B*T+1]\n",
+    "        self.current_step += B * T * self.num_processes\n",
+    "        tokens = self.tokens[self.current_step:self.current_step+B*T+1]\n",
     "        x = (tokens[:-1]).view(B, T)\n",
     "        y = (tokens[1:]).view(B, T)\n",
-    "        if (self.current_step+1)*B*T+1 > len(self.tokens):\n",
-    "            self.current_step = 1\n",
+    "        if (self.current_step+B*T* self.num_processes + B*T+1)  > len(self.tokens):\n",
+    "            self.current_step = self.cur_process * B * T\n",
     "        return x, y"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "id": "23426d49-2a88-4082-90d8-c93a07006b9f",
    "metadata": {},
    "outputs": [],
@@ -204,7 +243,7 @@
     "            if module.bias is not None:\n",
     "                torch.nn.init.zeros_(module.bias)\n",
     "        elif isinstance(module, nn.Embedding):\n",
-    "            torch.nn.init.normal_(module.weight, mean=0.0, std=(1.0 / math.sqrt(emb_neur)))\n",
+    "            torch.nn.init.normal_(module.weight, mean=0.0, std=std)\n",
     "\n",
     "    # I have taken this function [configure_optimizers] from Karpathy's nanoGPT\n",
     "    # https://github.com/karpathy/nanoGPT\n",
@@ -267,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "id": "f12ce39f-92fb-4cb9-b8f3-ff8b24600422",
    "metadata": {},
    "outputs": [
@@ -289,19 +328,23 @@
     "m = GPT()\n",
     "m = m.to(device)\n",
     "m = torch.compile(m)\n",
+    "#making loss average from all gpus\n",
+    "if ddp:\n",
+    "    m = DDP(model, device_ids=[ddp_local_rank]) \n",
+    "raw_m = m.module if ddp else m\n",
+    "\n",
     "print(sum(p.numel() for p in m.parameters())/1e6, 'M parameters')\n",
     "\n",
-    "data_loader = DataLoader(mini_batches, time_stamps)\n",
-    "# optmizer = torch.optim.Adam(m.parameters(), lr=lr, betas=(0.9, 0.95))\n",
+    "data_loader = DataLoader(mini_batches, time_stamps, cur_process=ddp_rank, num_processes=ddp_world_size)\n",
     "\n",
     "# I have taken this function [configure_optimizers] from Karpathy's nanoGPT\n",
-    "optmizer = m.configure_optimizers(weight_decay, max_lr, (beta1, beta2), device)\n",
+    "optmizer = raw_m.configure_optimizers(weight_decay, max_lr, (beta1, beta2), device)\n",
     "# scheduler = torch.optim.lr_scheduler.CosineAnnealingLR(optmizer, T_max=lr_steps, eta_min=min_lr)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "id": "67f0d7e9-84da-4821-9d0b-14f83fe32497",
    "metadata": {},
    "outputs": [
@@ -309,73 +352,60 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "epoch: 0, loss: 11.41157, norm: 27.69188, time: 22817.46ms, tok/s: 22977.49\n",
-      "epoch: 1, loss: 10.25615, norm: 59.41756, time: 4527.83ms, tok/s: 115792.32\n",
-      "epoch: 2, loss: 10.87149, norm: 11.13863, time: 4521.63ms, tok/s: 115951.12\n",
-      "epoch: 3, loss: 9.66047, norm: 5.64716, time: 4525.66ms, tok/s: 115847.91\n",
-      "epoch: 4, loss: 8.69950, norm: 2.97529, time: 4524.99ms, tok/s: 115865.06\n",
-      "epoch: 5, loss: 10.57604, norm: 27.93127, time: 4542.54ms, tok/s: 115417.34\n",
-      "epoch: 6, loss: 8.80328, norm: 16.43164, time: 4543.31ms, tok/s: 115397.87\n",
-      "epoch: 7, loss: 8.25292, norm: 6.36091, time: 4597.09ms, tok/s: 114047.81\n",
-      "epoch: 8, loss: 8.00966, norm: 3.81319, time: 4531.47ms, tok/s: 115699.39\n",
-      "epoch: 9, loss: 7.64843, norm: 3.09671, time: 4532.92ms, tok/s: 115662.44\n",
-      "epoch: 10, loss: 7.26969, norm: 2.38564, time: 4545.01ms, tok/s: 115354.52\n",
-      "epoch: 11, loss: 7.01213, norm: 2.86827, time: 4558.70ms, tok/s: 115008.13\n",
-      "epoch: 12, loss: 6.83554, norm: 3.10425, time: 4562.07ms, tok/s: 114923.32\n",
-      "epoch: 13, loss: 6.65110, norm: 2.26222, time: 4562.74ms, tok/s: 114906.49\n",
-      "epoch: 14, loss: 6.53412, norm: 1.67401, time: 4585.52ms, tok/s: 114335.66\n",
-      "epoch: 15, loss: 6.41094, norm: 1.15966, time: 4594.31ms, tok/s: 114116.83\n",
-      "epoch: 16, loss: 6.35806, norm: 1.52016, time: 4590.74ms, tok/s: 114205.45\n",
-      "epoch: 17, loss: 6.28192, norm: 0.65876, time: 4612.12ms, tok/s: 113676.23\n",
-      "epoch: 18, loss: 6.26423, norm: 1.74066, time: 4597.19ms, tok/s: 114045.42\n",
-      "epoch: 19, loss: 6.24132, norm: 1.35649, time: 4602.64ms, tok/s: 113910.29\n",
-      "epoch: 20, loss: 6.21878, norm: 0.88524, time: 4607.62ms, tok/s: 113787.07\n",
-      "epoch: 21, loss: 6.21550, norm: 0.83949, time: 4609.93ms, tok/s: 113730.04\n",
-      "epoch: 22, loss: 6.16853, norm: 0.63917, time: 4610.87ms, tok/s: 113707.03\n",
-      "epoch: 23, loss: 6.15609, norm: 0.45939, time: 4614.59ms, tok/s: 113615.26\n",
-      "epoch: 24, loss: 6.13913, norm: 0.81753, time: 4619.85ms, tok/s: 113486.05\n",
-      "epoch: 25, loss: 6.11704, norm: 0.68388, time: 4624.57ms, tok/s: 113370.15\n",
-      "epoch: 26, loss: 6.10627, norm: 0.35364, time: 4632.93ms, tok/s: 113165.60\n",
-      "epoch: 27, loss: 6.08224, norm: 0.60481, time: 4633.00ms, tok/s: 113163.82\n",
-      "epoch: 28, loss: 6.08741, norm: 0.57897, time: 4628.73ms, tok/s: 113268.12\n",
-      "epoch: 29, loss: 6.04862, norm: 0.24919, time: 4643.46ms, tok/s: 112908.99\n",
-      "epoch: 30, loss: 6.03375, norm: 0.49887, time: 4646.90ms, tok/s: 112825.24\n",
-      "epoch: 31, loss: 6.02274, norm: 0.56357, time: 4645.63ms, tok/s: 112856.14\n",
-      "epoch: 32, loss: 5.99800, norm: 0.31932, time: 4656.94ms, tok/s: 112582.12\n",
-      "epoch: 33, loss: 5.98866, norm: 0.36469, time: 4658.58ms, tok/s: 112542.44\n",
-      "epoch: 34, loss: 5.95726, norm: 0.41914, time: 4670.02ms, tok/s: 112266.64\n",
-      "epoch: 35, loss: 5.96021, norm: 0.36536, time: 4676.80ms, tok/s: 112103.89\n",
-      "epoch: 36, loss: 5.93534, norm: 0.27456, time: 4671.53ms, tok/s: 112230.43\n",
-      "epoch: 37, loss: 5.92741, norm: 0.36302, time: 4678.30ms, tok/s: 112068.03\n",
-      "epoch: 38, loss: 5.91452, norm: 0.31118, time: 4687.57ms, tok/s: 111846.37\n",
-      "epoch: 39, loss: 5.89911, norm: 0.28081, time: 4682.08ms, tok/s: 111977.69\n",
-      "epoch: 40, loss: 5.91245, norm: 0.21580, time: 4680.41ms, tok/s: 112017.44\n",
-      "epoch: 41, loss: 5.88678, norm: 0.24640, time: 4690.31ms, tok/s: 111781.07\n",
-      "epoch: 42, loss: 5.88316, norm: 0.24539, time: 4688.29ms, tok/s: 111829.26\n",
-      "epoch: 43, loss: 5.87608, norm: 0.20115, time: 4692.53ms, tok/s: 111728.22\n",
-      "epoch: 44, loss: 5.86671, norm: 0.16352, time: 4698.53ms, tok/s: 111585.50\n",
-      "epoch: 45, loss: 5.87647, norm: 0.17668, time: 4702.11ms, tok/s: 111500.69\n",
-      "epoch: 46, loss: 5.84612, norm: 0.19282, time: 4694.37ms, tok/s: 111684.33\n",
-      "epoch: 47, loss: 5.87297, norm: 0.18067, time: 4702.01ms, tok/s: 111502.88\n",
-      "epoch: 48, loss: 5.84945, norm: 0.15185, time: 4694.90ms, tok/s: 111671.74\n",
-      "epoch: 49, loss: 5.84585, norm: 0.13241, time: 4698.46ms, tok/s: 111587.31\n"
+      "epoch: 0, loss: 11.41157, norm: 27.69186, time: 32456.01ms, tok/s: 16153.81\n",
+      "epoch: 1, loss: 10.25611, norm: 59.41640, time: 4521.97ms, tok/s: 115942.31\n",
+      "epoch: 2, loss: 10.87149, norm: 11.13864, time: 4528.18ms, tok/s: 115783.51\n",
+      "epoch: 3, loss: 9.66048, norm: 5.64720, time: 4518.69ms, tok/s: 116026.58\n",
+      "epoch: 4, loss: 8.69949, norm: 2.97525, time: 4530.95ms, tok/s: 115712.56\n",
+      "epoch: 5, loss: 10.57622, norm: 27.93170, time: 4540.89ms, tok/s: 115459.35\n",
+      "epoch: 6, loss: 8.80340, norm: 16.43364, time: 4545.46ms, tok/s: 115343.22\n",
+      "epoch: 7, loss: 8.25267, norm: 6.35556, time: 4552.14ms, tok/s: 115173.88\n",
+      "epoch: 8, loss: 8.00945, norm: 3.81256, time: 4550.01ms, tok/s: 115227.93\n",
+      "epoch: 9, loss: 7.64820, norm: 3.09563, time: 4549.56ms, tok/s: 115239.30\n",
+      "epoch: 10, loss: 7.26965, norm: 2.38938, time: 4555.97ms, tok/s: 115077.15\n",
+      "epoch: 11, loss: 7.01210, norm: 2.86920, time: 4564.73ms, tok/s: 114856.21\n",
+      "epoch: 12, loss: 6.83550, norm: 3.10380, time: 4571.70ms, tok/s: 114681.31\n",
+      "epoch: 13, loss: 6.65100, norm: 2.25953, time: 4589.57ms, tok/s: 114234.58\n",
+      "epoch: 14, loss: 6.53410, norm: 1.67421, time: 4600.50ms, tok/s: 113963.25\n",
+      "epoch: 15, loss: 6.41090, norm: 1.15972, time: 4608.43ms, tok/s: 113767.19\n",
+      "epoch: 16, loss: 6.35798, norm: 1.51990, time: 4620.93ms, tok/s: 113459.53\n",
+      "epoch: 17, loss: 6.28190, norm: 0.65863, time: 4618.82ms, tok/s: 113511.26\n",
+      "epoch: 18, loss: 6.26425, norm: 1.74340, time: 4613.78ms, tok/s: 113635.32\n",
+      "epoch: 19, loss: 6.24137, norm: 1.35742, time: 4613.66ms, tok/s: 113638.29\n",
+      "epoch: 20, loss: 6.21880, norm: 0.88430, time: 4628.62ms, tok/s: 113270.84\n",
+      "epoch: 21, loss: 6.21551, norm: 0.83949, time: 4626.25ms, tok/s: 113329.01\n",
+      "epoch: 22, loss: 6.16856, norm: 0.63989, time: 4630.36ms, tok/s: 113228.41\n",
+      "epoch: 23, loss: 6.15609, norm: 0.45960, time: 4629.77ms, tok/s: 113242.67\n",
+      "epoch: 24, loss: 6.13915, norm: 0.81744, time: 4634.58ms, tok/s: 113125.25\n",
+      "epoch: 25, loss: 6.11703, norm: 0.68325, time: 4637.56ms, tok/s: 113052.53\n",
+      "epoch: 26, loss: 6.10629, norm: 0.35434, time: 4640.71ms, tok/s: 112975.93\n",
+      "epoch: 27, loss: 6.08224, norm: 0.60423, time: 4647.18ms, tok/s: 112818.58\n",
+      "epoch: 28, loss: 6.08739, norm: 0.57781, time: 4654.58ms, tok/s: 112639.25\n",
+      "epoch: 29, loss: 6.04862, norm: 0.24882, time: 4651.02ms, tok/s: 112725.48\n",
+      "epoch: 30, loss: 6.03374, norm: 0.49800, time: 4658.42ms, tok/s: 112546.21\n",
+      "epoch: 31, loss: 6.02272, norm: 0.56266, time: 4666.96ms, tok/s: 112340.44\n",
+      "epoch: 32, loss: 5.99801, norm: 0.31906, time: 4671.62ms, tok/s: 112228.22\n",
+      "epoch: 33, loss: 5.98866, norm: 0.36436, time: 4675.33ms, tok/s: 112139.15\n",
+      "epoch: 34, loss: 5.95721, norm: 0.41721, time: 4676.15ms, tok/s: 112119.49\n",
+      "epoch: 35, loss: 5.96021, norm: 0.36433, time: 4682.39ms, tok/s: 111970.27\n",
+      "epoch: 36, loss: 5.93532, norm: 0.27529, time: 4686.43ms, tok/s: 111873.76\n",
+      "epoch: 37, loss: 5.92740, norm: 0.36161, time: 4690.58ms, tok/s: 111774.61\n",
+      "epoch: 38, loss: 5.91450, norm: 0.30999, time: 4695.23ms, tok/s: 111663.97\n",
+      "epoch: 39, loss: 5.89911, norm: 0.28093, time: 4701.72ms, tok/s: 111509.87\n",
+      "epoch: 40, loss: 5.91240, norm: 0.21516, time: 4700.83ms, tok/s: 111530.87\n",
+      "epoch: 41, loss: 5.88676, norm: 0.24564, time: 4707.84ms, tok/s: 111364.83\n",
+      "epoch: 42, loss: 5.88314, norm: 0.24538, time: 4707.71ms, tok/s: 111368.02\n",
+      "epoch: 43, loss: 5.87605, norm: 0.20103, time: 4707.57ms, tok/s: 111371.32\n",
+      "epoch: 44, loss: 5.86669, norm: 0.16380, time: 4710.69ms, tok/s: 111297.50\n",
+      "epoch: 45, loss: 5.87645, norm: 0.17651, time: 4708.72ms, tok/s: 111344.04\n",
+      "epoch: 46, loss: 5.84607, norm: 0.19264, time: 4714.44ms, tok/s: 111208.98\n",
+      "epoch: 47, loss: 5.87293, norm: 0.18035, time: 4718.21ms, tok/s: 111120.14\n",
+      "epoch: 48, loss: 5.84941, norm: 0.15189, time: 4720.30ms, tok/s: 111070.97\n",
+      "epoch: 49, loss: 5.84581, norm: 0.13224, time: 4714.31ms, tok/s: 111211.95\n"
      ]
     }
    ],
    "source": [
-    "assert batch_size % (mini_batches * time_stamps) == 0, \"batch_size is not devided by B and T\"\n",
-    "mini_epochs = int(batch_size / (mini_batches * time_stamps))\n",
-    "\n",
-    "def get_lr(epoch):\n",
-    "    if epoch < lr_steps:\n",
-    "        return (max_lr * (epoch+1)/lr_steps)\n",
-    "    if epoch > epochs:\n",
-    "        return min_lr\n",
-    "    loc = (epoch - lr_steps)/(epochs - lr_steps)\n",
-    "    coef = 0.5 * (1.0 + math.cos(math.pi * loc))\n",
-    "    return min_lr + coef * (max_lr - min_lr)\n",
-    "\n",
-    "\n",
     "for epoch in range(50):\n",
     "    t0 = time.time()\n",
     "    accumulated_loss = 0.0\n",
@@ -389,22 +419,29 @@
     "            logits, loss = m(x, y)\n",
     "        loss /= mini_epochs\n",
     "        accumulated_loss += loss.detach()\n",
+    "    \n",
+    "        if ddp:\n",
+    "            m.require_backward_grad_sync = (mini_epoch == mini_epochs-1)\n",
     "        loss.backward()\n",
-    "\n",
+    "    if ddp:\n",
+    "        dist.all_reduce(accumulated_loss, op=dist.ReduceOp.AVG)\n",
+    "    \n",
     "    norm = torch.nn.utils.clip_grad_norm_(m.parameters(), 1.0)\n",
+    "    # scheduler.step()\n",
     "    lr = get_lr(epoch)\n",
     "    for param_group in optmizer.param_groups:\n",
     "        param_group['lr'] = lr\n",
     "    optmizer.step()\n",
-    "    # scheduler.step()\n",
     "    \n",
     "    torch.cuda.synchronize()\n",
     "    t1 = time.time()\n",
     "    dt = t1-t0\n",
+    "\n",
+    "    if master_process:\n",
+    "        print(f\"epoch: {epoch}, loss: {accumulated_loss:.5f}, norm: {norm:.5f}, time: {dt*1000:.2f}ms, tok/s: {data_loader.B*data_loader.T*mini_epochs*ddp_world_size/dt:.2f}\")\n",
     "    \n",
-    "    print(f\"epoch: {epoch}, loss: {accumulated_loss:.5f}, norm: {norm:.5f}, time: {dt*1000:.2f}ms, tok/s: {data_loader.B*data_loader.T*mini_epochs/dt:.2f}\")\n",
-    "    \n",
-    "    "
+    "if ddp:\n",
+    "    destroy_process_group()"
    ]
   },
   {
